tests/compiler_diag_runtime_error_at_bad.stderr
tests/compiler_diag_runtime_error_at_bad.sl:5:36: SL2075: consteval error: runtime anchored
